--- a/ProjetoA3_2024.ipynb
+++ b/ProjetoA3_2024.ipynb
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "pISoYIBJiS_c"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "Toj_jpskNYFo"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -94,6 +94,8 @@
       "source": [
         "# 3. Visualização dos resultados\n",
         "results_df = pd.DataFrame(results, index=[\"Accuracy\", \"Precision\", \"Recall\", \"F1 Score\"]).T\n",
+        "\n",
+        "print(results_df)\n",
         "\n",
         "results_df.plot(kind='bar', figsize=(10, 6), ylim=(0, 1), colormap='viridis')\n",
         "plt.title(\"Comparação de Algoritmos de Classificação de Spam\")\n",
@@ -106,13 +108,23 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 633
         },
         "id": "58IgmODQNZzM",
-        "outputId": "1e0f9fe0-f8f4-46da-e952-116866dbff8b"
+        "outputId": "f771af1d-b030-44de-e866-7f9875e6493e"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                     Accuracy  Precision    Recall  F1 Score\n",
+            "K-Nearest Neighbors  0.913004   1.000000  0.348993  0.517413\n",
+            "Decision Tree        0.968610   0.907143  0.852349  0.878893\n",
+            "Random Forest        0.981166   1.000000  0.859060  0.924188\n"
+          ]
+        },
         {
           "output_type": "display_data",
           "data": {
